--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    - name: Push to Docker Hub
+    - name: Push to Docker Hub build image
       run: docker push leakingmemory/alpine-casablanca:build
+    - name: Push to Docker Hub runtime image
       run: docker push leakingmemory/alpine-casablanca:runtime
