--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,11 +18,11 @@ jobs:
       run: docker build . --file Dockerfile --tag leakingmemory/alpine-casablanca:build
     - name: Build the runtime Docker image
       run: docker build . --target casablanca-runtime --file Dockerfile --tag leakingmemory/alpine-casablanca:runtime
-    - name: Login to DockerHub
-      uses: docker/login-action@v1 
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Login to GitHub Docker Registry
+      run: docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Push to Docker Hub build image
       run: docker push leakingmemory/alpine-casablanca:build
     - name: Push to Docker Hub runtime image
